k8s/template/blog-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      # 最小2台のうち1台を落として1+1台起動して終わったら残りが落ちる感じ
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        blog: h2o
    spec:
      containers:
        - name: blog-container
          image: ${DOCKER_IMAGE}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # readinessProbe:
            # httpGet:
              # path: /
              # port: 8080
            # initialDelaySeconds: 1
            # periodSeconds: 10
            # timeoutSeconds: 1
            # successThreshold: 1
            # failureThreshold: 3
