k8s/template/blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  type: NodePort
  selector:
    blog: h2o
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31313
