k8s/template/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gke-ingress-static-blog
    # kube-lego 使わないパターン
    # https://github.com/kubernetes/ingress/pull/291
    # ingress.gcp.kubernetes.io/pre-shared-cert: vvakame-blog
    # https://github.com/jetstack/kube-lego/issues/173
    # kubernetes.io/ingress.allow-http: "false"

    # kube-lego 使うパターン
    kubernetes.io/ingress.class: gce
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - blog.vvaka.me
      secretName: kube-lego-tls
  rules:
    - host: blog.vvaka.me
      http:
        paths:
          - backend:
              serviceName: blog-service
              servicePort: 80
            path: /
  backend:
    serviceName: blog-service
    servicePort: 80
